# CSC8498---Dissertation-Project

./: .gitignore  CMakeLists.txt
Assets/Meshes/: desktop.ini  grassBladeCustom.blend  grassBladeCustom.blend1  grassBladeCustom.mtl  grassBladeCustomOLD.msh  grassBladeCustomSingle (1).msh  grassBladeCustomSingle.blend  grassBladeCustomSingle.blend1  grassBladeCustomSingle.fbx  grassBladeCustomSingle.msh  grassBladeCustomVerticies.blend  grassBladeCustomVerticies.blend1  grassBladeCustomVerticies.msh  grassBladeCustomVerticies.mtl  grassBladeLeaf.blend  grassBladeLeaf.blend1  grassBladeLeaf.fbx  grassBladeLeaf.msh  singleGrassBlade.msh
Assets/Shaders/: GrassBlade.comp  GrassTile.frag  GrassTile.vert  bladeSort.comp  grassBlade.comp  grassBlade.frag  grassBlade.vert  grassTile.frag  grassTile.vert  initBladeSort.comp  instGrassBlade.frag  instGrassBlade.vert  noiseTex.frag  noiseTex.vert
CSC8498/: CMakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  GrassTile.cpp  GrassTile.h  Main.cpp  PerfStats.h  TutorialGame.cpp  TutorialGame.h
CSC8503CoreClasses/: CMakeLists.txt  CollisionDetection.h  PhysicsSystem.cpp  PhysicsSystem.h  Ray.h  RenderObject.h
NCLCoreClasses/: Camera.h  RendererBase.cpp  RendererBase.h  Shader.cpp  Shader.h
OpenGLRendering/: OGLComputeShader.h  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLShader.h
